Backend de Platzi-Overflow

--- a/src/app/question/question-list.component.html
+++ b/src/app/question/question-list.component.html
@@ -11,5 +11,7 @@
     </mat-list-item>
     <mat-divider></mat-divider>
   </mat-list>
-  <button mat-fab class="add-question" color="accent" [routerLink]="['questions/new']">+</button>
+  <div *ngIf="isLoggedIn()">
+    <button mat-fab class="add-question" color="accent" [routerLink]="['questions/new']"><mat-icon>add</mat-icon></button>
+  </div>  
 </div>
